2000-04-18  Ulrich Drepper  <drepper@redhat.com>

	* po/cs.po: Update from translation team.

2000-04-13  Ulrich Drepper  <drepper@redhat.com>

	* posix/globtest.sh: Work around inconsistency with expanding ~/
	in shell (PR libc/1690).  Reported by patsmith@pobox.com.

2000-04-12  Ulrich Drepper  <drepper@redhat.com>

	* libio/iopopen.c (_IO_new_proc_open): Close pipes in case the
	mode is invalid.
	* libio/oldiopopen.c (_IO_old_proc_open): Likewise.
	Patch by Bart Veer <bartv@redhat.com>.

2000-04-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/getdents.c (__getdents): The Linux
	kernel does not allow relative seeks on descriptors associated
	with directories.  Go back to get the position in the directory
	every time we enter the function.  Return -1 and set errno if one
	entry could be read from the kernel but does not fit into the
	buffer passed in by the user.

1999-10-29  Ulrich Drepper  <drepper@cygnus.com>

	* stdlib/strtod.c: Handle hexadecimal numbers with leading digit
	!= 1 correctly and more than one digit before decimal point.

2000-03-16  Mark Kettenis  <kettenis@gnu.org>

	* sysdeps/unix/sysv/linux/i386/sys/procfs.h (prfpregset_t):
	Typedef for elf_fpregset_t instead of `elf_fpregset_t *'.

2000-04-04  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sys/ucontext.h: Prepend REG_ to
	enum values and macros for register names.

2000-03-31  Andreas Schwab  <schwab@suse.de>

	* string/strfry.c: Declare STATE as array of char instead of int
	and do not initialize it (done by initstate_r).  Pass correct
	size.

2000-03-29  Jes Sorensen  <jes@pcatls01.cern.ch>

	* malloc/malloc.c: Declare bit flags UL so that they will not
	default to int size when being inverted.

2000-03-30  Ulrich Drepper  <drepper@redhat.com>

	* posix/getopt.c (_getopt_internal): Return -1 if argc < 1.
	Reported by Andrew Wiseman <a.wiseman@bandc.dircon.co.uk>
	(PR libc/1677).

2000-03-26  Roland McGrath  <roland@baalperazim.frob.com>
