@@ -1,3 +1,8 @@
+2000-04-18  H.J. Lu  <hjl@gnu.org>
+
+        * posix/globtest.sh: Properly apply the patch by Ulrich Drepper
+        <drepper@redhat.com> on 2000-04-13.
+
 2000-04-18  Ulrich Drepper  <drepper@redhat.com>
 
 	* po/cs.po: Update from translation team.
